<resources>
    <string name="app_name">Restro Waiter</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="server_connection">Server Connection</string>
    <string name="passowrd">Password</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="waiter">Waiter</string>
    <string name="pax">Pax</string>
    <string name="select_waiter">Select Waiter</string>
    <string name="ok">Ok</string>

    <string name="cancel">Cancel</string>
    <string name="search_item">Search Item</string>


</resources>
