<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TableRow  android:id="@+id/waiter_row"
            android:padding="2dp">

            <TextView
                android:id="@+id/tv_waiter_name"
                android:layout_width="0dp"
                android:layout_weight="1.9"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:text="@string/waiter"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                />

            <Spinner android:drawSelectorOnTop="true"
                android:id="@+id/waiter_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/spinner_style"
                android:prompt="@string/select_waiter"

                />






        </TableRow>
        <TableRow  android:id="@+id/pax_row"
            android:padding="2dp">

            <TextView
                android:id="@+id/tv_pax_name"
                android:layout_width="0dp"
                android:layout_weight="1.9"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:text="@string/pax"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                />

            <EditText
                android:id="@+id/et_pax_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="0"
                android:textAlignment="center"
                android:layout_weight="2"/>


        </TableRow>

        <TableRow android:padding="6dp">

            <Button
                android:id="@+id/btn_pax_cancel"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="16dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:paddingLeft="5dp"

                android:background="@color/occupied"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
            <Button android:id="@+id/btn_pax_ok"
                android:text="@string/ok"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:paddingRight="5dp"

                android:background="@color/vacant"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
