<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:src="@drawable/background" />

        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="135dp"
            android:layout_height="107dp"
            android:layout_above="@+id/login_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="37dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:orientation="vertical" >



            <EditText
                android:id="@+id/login_user_name"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"

                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:drawableLeft="@drawable/ic_user_name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/login_password"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="15sp"
                />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimary"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:onClick="loginEvent"
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="15sp"
                />

            <Button
                android:id="@+id/serverBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/login_layout"
                android:layout_alignBottom="@+id/login_layout"
                android:layout_centerInParent="true"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/server_connection"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>